[tool.poetry]
name = "Tic Tac Toe"
version = "0.1.0"
description = "Simple minijuego creado en lenguaje Python, desarrollado por Jose Emilio Hernández"
authors = ["Jose E. Hernandez <joseehernandez1301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
